--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vite-plugin-ejs": "^1.6.4"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^43.1.0",
+    "@ckeditor/ckeditor5-font": "^43.1.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "gh-pages": "^5.0.0",
