--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "devDependencies": {
     "ejs": "^3.1.9",
+    "prettier": "^3.3.3",
     "vite": "^4.2.0",
     "vite-plugin-ejs": "^1.6.4"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^43.1.0",
+    "@ckeditor/ckeditor5-build-classic": "^43.1.1",
     "@ckeditor/ckeditor5-font": "^43.1.0",
     "@ckeditor/ckeditor5-react": "^9.2.0",
     "bootstrap": "^5.3.3",
